Changed greetings text.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Koduleht</title>
+		<title>Martini koduleht</title>
 		<meta charset="utf-8"/>
 	</head>
 	
 	<body>
 		<h1>Tere!</h1>
-		<h2>See on minu koduleht V2</h2>
-		
+		<h2>Mina olen Martin.</h2>
+		<img src="martin.jpg" alt="martin">
 		
 	</body>
 </html>
