--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Martini koduleht</title>
+		<title>Minu koduleht</title>
 		<meta charset="utf-8"/>
 	</head>
 	
