--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 	<body>
 		<h1>Tere!</h1>
-		<h2>Mina olen Martin.</h2>
+		<h2>Mina olen Martin Tammai.</h2>
 		<img src="martin.jpg" alt="martin">
 		
 	</body>
